--- a/HelloWorld/WpfApplication1/WpfApplication1/MainWindow.xaml
+++ b/HelloWorld/WpfApplication1/WpfApplication1/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="164" Margin="93,55,0,0" Stroke="Black" VerticalAlignment="Top" Width="341"/>
+
     </Grid>
 </Window>
